@@ -38,12 +38,11 @@ buession.classpath string default value is null。设置自定义类目录路径
 
 Version Description
 -------------------
-
 * Buession PHP Framework 将严格遵循国际软件命名规范
 * 版本命名格式：主版本号.次版本号.修订版本号 软件版本 （Build-可选，以修正 “sp + 日期” 定义，仅在 Release 版中产生）
 * 主版本号：如果发生重大变化，或增加新名称空间、类级别的 API 将会改变，或对 PHP 版本的依赖发生大变化
 * 次版本号：已有 API 发生重大变化，或已有名称空间、类下新增 API 将发生改变
-* 修订版本号：局部调整，性能优化，BUG 修复，将发生改变
+* 修订版本号：局部调整，性能优化，BUG 修复
 * 软件版本：Alpha   - 处于开发阶段，内部测试，功能不完善，BUG 多（不推荐使用）
             Beta    - 功能完善，可供外部使用，但可能也会存在重大性能问题和重大 BUG（谨慎使用）
 			Release - 功能完善，可供外部使用，无重大性能问题和 BUG（推荐使用）
