@@ -56,10 +56,10 @@ extern zend_class_entry *buession_ce;
 
 #define BUESSION 					"Buession"
 #define BUESSION_MAJOR_VERSION		0
-#define BUESSION_MINOR_VERSION		0
-#define BUESSION_RELEASE_VERSION	1
+#define BUESSION_MINOR_VERSION		1
+#define BUESSION_RELEASE_VERSION	0
 #define BUESSION_EXTRA_VERSION		"Release"
-#define BUESSION_VERSION 			"0.0.1"
+#define BUESSION_VERSION 			"0.1.0"
 #define BUESSION_BUILD				""
 #define BUESSION_API_VERSION 		ZEND_TOSTR(PHP_API_VERSION)
 #define BUESSION_REVISION_ID		"$Revision: "BUESSION_API_VERSION" $"
